Fix vertical align : maybe because of display flex in other css code

--- a/style.css
+++ b/style.css
@@ -230,15 +230,15 @@ html, body {
 	left: 0;
 	right: 0;
 	/* background-color: #444; */
-	display: flex;
+	/* display: flex; */
 	justify-content: center;
 	align-items: center;
 }
 
 .loader .loader-inner {
 	position: relative;
-	width: 100%;
-	height: 100%;
+	/* width: 80%;
+	height: 80%; */
 	/* background-color: #f17f7f; */
 	display: flex;
     /* justify-content: center; */
